--- a/.github/workflows/ExeBuild.yml
+++ b/.github/workflows/ExeBuild.yml
@@ -13,24 +13,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    
-      # Check-out repository
-      - uses: actions/checkout@v3
+    - name: Build EXE from Python Script
+      uses: Nuitka/Nuitka-Action@v0.4
 
-      # Setup Python
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-
-      # Build python script into a stand-alone exe
-      - uses: Nuitka/Nuitka-Action@v0.4
-        with:
-          script-name: calc.py
-
-      # Uploads artifact
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: exe
-          path: build/calc.exe
