--- a/.github/workflows/ExeBuild.yml
+++ b/.github/workflows/ExeBuild.yml
@@ -1,27 +1,55 @@
-name: Python executable
 
+name: Executable Build
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main" ]
-    
+    branches: [ "main", "master" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
 
   build:
-    # Windows is currently the only platform this action supports
-    runs-on: windows-latest
+
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+      
+    runs-on: ${{ matrix.os }}
 
     steps:
-    - name: Build EXE from Python Script
-      uses: Nuitka/Nuitka-Action@v0.4
-      with:
-        script-name: calc.py
+    
+      # Check-out repository
+      - uses: actions/checkout@v3
       
-    - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-          name: Windows Build
-          path: 
-            build.exe
+      # Setup Python
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+          cache: 'pip'
 
+      # Build python script into a stand-alone exe
+      - uses: Nuitka/Nuitka-Action@main
+        with:
+          script-name: calc.py
+          access-token: ${{ secrets.NUITKA_COMMERCIAL_ACCESS_TOKEN }}
+          onefile: true
+          enable-plugins: pyside6
+          disable-console: true
+          
+      # Uploads artifact
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ runner.os }} Build
+          path: |
+            build/*.exe
+            build/*.bin
+            build/*.app/**/*
+            
