--- a/.github/workflows/ExeBuild.yml
+++ b/.github/workflows/ExeBuild.yml
@@ -9,46 +9,32 @@ on:
   pull_request:
     branches: [ "main", "master" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 jobs:
 
   build:
-
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-      
-    runs-on: ${{ matrix.os }}
+    # Windows is currently the only platform this action supports
+    runs-on: windows-latest
 
     steps:
     
       # Check-out repository
       - uses: actions/checkout@v3
-      
+
       # Setup Python
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-          cache: 'pip'
 
       # Build python script into a stand-alone exe
-      - uses: Nuitka/Nuitka-Action@main
+      - uses: Nuitka/Nuitka-Action@v0.4
         with:
           script-name: calc.py
-          access-token: ${{ secrets.NUITKA_COMMERCIAL_ACCESS_TOKEN }}
-          onefile: true
-          disable-console: true
-          
+
       # Uploads artifact
-      - name: Upload Artifacts
+      - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ runner.os }} Build
-          path: |
-            build/*.exe
-            build/*.bin
-            build/*.app/**/*
-            
+          name: exe
+          path: build/calc.exe
